added a time tree test

--- a/boot-2.0/pom.xml
+++ b/boot-2.0/pom.xml
@@ -77,6 +77,36 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- added by me -->
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-kernel</artifactId>
+            <version>3.2.5</version>
+            <type>test-jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>graphaware-framework-embedded</artifactId>
+            <version>3.2.5.51</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>timetree</artifactId>
+            <version>3.2.1.51.27</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-graphdb-api</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-io</artifactId>
+            <version>3.2.5</version>
+            <type>test-jar</type>
+        </dependency>
     </dependencies>
 
     <build>
