--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 
         <module>boot-1.4</module>
         <module>boot-1.5</module>
-
+        <module>boot-2.0</module>
         <module>sdn-4.1</module>
         <module>sdn-4.2</module>
         <module>sdn-5.0</module>
